[metadata]
name = pysic-ArvinZJC
version = 0.3.0a1
url = https://github.com/ArvinZJC/PY-SIC
project_urls = 
    Homepage = https://github.com/ArvinZJC/PY-SIC
    Documentation = https://github.com/ArvinZJC/PY-SIC
    Changelog = https://github.com/ArvinZJC/PY-SIC/releases
    Source = https://github.com/ArvinZJC/PY-SIC
    Issue Tracker = https://github.com/ArvinZJC/PY-SIC/issues
author = Arvin Zhao
author_email = SteveJobz@isarvin.com
# "Trove classifiers" for PyPI (https://pypi.org/classifiers/).
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Graphics :: Graphics Conversion
license = GPL-3.0 License
license_file = LICENSE
description = A simple image converter for Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = image-converter, python3
platforms = any
provides = pysic

[options]
setup_requires = setuptools >= 42
install_requires = 
    Pillow == 8.3.2
    tqdm == 4.62.2
python_requires = >=3.6
packages = find:
package_dir = src

[options.packages.find]
where = src